--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
 .container{
     height: 85vh;
     width: 80vw;
+    max-height: 700px;
     max-width: 550px;
     display: flex;
     flex-direction: column;
