--- a/style.css
+++ b/style.css
@@ -122,11 +122,9 @@ body{
 
     .container{
         height: 100vh;
-        width: 100vh;
-        /* margin-left: 10px;
-        margin-right: 10px;
-        margin-top: 50px;
-        margin-bottom: 50px; */
+        width: 100vw;
+        max-height: 100vh;
+        max-width: 100vw;
     }
 
     .copy {
@@ -135,6 +133,10 @@ body{
         margin-top: 100px;
     }
 
+    .container{
+        border: none;
+        outline: none;
+    }
     .container p {
         
         margin-left: 30px;
